creating main html layout

--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -1,6 +1,6 @@
 /*=====================================
-        PARTIAL IMPORTS
+        BASE PARTIALS
 ======================================*/
 
-//Base Partial
-@import 'base/index'
+@import 'reset',
+        'base'
