--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+/*=====================================
+        PARTIAL IMPORTS
+======================================*/
+/*=====================================
+        BASE PARTIALS
+======================================*/
+/*=====================================
+        BASE PARTIAL
+======================================*/
+* {
+  box-sizing: border-box;
+}
 
+body {
+  font-family: "Poppins", sans-serif;
+}
 
 /*# sourceMappingURL=styles.css.map */
