created files for sass each sass folders and connected each file via an index file. Working on main portfolio layout

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,4 +3,10 @@
 ======================================*/
 
 //Base Partial
-@import 'base/index'
+@import 'base/index';
+
+//Utilites Partial
+@import 'utilities/index';
+
+//Components Partial
+@import 'components/index';
