--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -19,6 +19,30 @@
   }
 }
 
+@keyframes slideOut {
+  0% {
+    height: 0;
+  }
+
+  30% {
+    height: 50%;
+  }
+
+  70% {
+    height: 100%;
+  }
+}
+
+#about {
+  transition: 2s ease-out;
+  & p {
+    border-left: 1px solid #000;
+    padding-left: .5em;
+    height: 0;
+    overflow: hidden;
+  }
+}
+
 .nav-bar {
   position: absolute;
   top: 50%;
@@ -42,10 +66,11 @@ section {
 }
 
 .portfolio-item {
-  border-bottom: 1px solid #f0f0f0;
   margin-top: .5em;
   & p:first-of-type {
     font-size: 1.5rem;
-
+  }
+  & .portfolio-info {
+    border: 1px solid #f0f0f0;
   }
 }
