finished creating sliding effect with p element in about section. Working on the sliding effect also on working on the bottom border. Added a scaling effect to <a> tags in nav-bar to scale when hovered

--- a/scss/components/_flexbox.scss
+++ b/scss/components/_flexbox.scss
@@ -1,10 +1,16 @@
 //Flexbox
 
-.main-header {
+.main-header,
+.nav-bar {
   display: flex;
 }
 
 .main-header {
   align-items: center;
   justify-content: center;
+}
+
+.nav-bar {
+  justify-content: center;
+  align-content: center;
 }
