--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -20,12 +20,34 @@
 }
 
 // Trying to create a sliding transition for aboutMe when clicked
+
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-60px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes expand-section {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1.2);
+  }
+}
+
 #about {
   padding-left: .5em;
+  transition: border-bottom .8s ease-in-out;
   & .display {
     border-left: 1px solid #000;
     padding-left: .5em;
-    transition: all .5s ease-in-out;
+    max-height: 0;
     overflow: hidden;
   }
   & h2:hover {
@@ -33,8 +55,13 @@
   }
 }
 
-.hide {
-  max-height: 0;
+.expand-section {
+  animation: expand-section 2s ease-in-out forwards;
+}
+
+.slide-down {
+  transform-origin: top center;
+  animation: slide-down .5s ease-in-out forwards;
 }
 
 .nav-bar {
@@ -46,17 +73,19 @@
 
 .nav-list {
   text-align: center;
+  width: 30%;
   padding-inline-start: 0;
   & li {
     margin-bottom: .5em;
   }
   & a {
     color: $primary-white;
+    display: inline-block;
   }
   & a:hover {
     color: #a8a8a8;
-    transform: scale(1.5);
     transition: all .4s ease-in-out;
+    transform: scale(1.3);
   }
 }
 
