--- a/css/styles.css
+++ b/css/styles.css
@@ -419,21 +419,45 @@ section .heading-sub-four {
   position: absolute;
 }
 
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-60px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes expand-section {
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1, 1.2);
+  }
+}
 #about {
   padding-left: 0.5em;
+  transition: border-bottom 0.8s ease-in-out;
 }
 #about .display {
   border-left: 1px solid #000;
   padding-left: 0.5em;
-  transition: all 0.5s ease-in-out;
+  max-height: 0;
   overflow: hidden;
 }
 #about h2:hover {
   cursor: pointer;
 }
 
-.hide {
-  max-height: 0;
+.expand-section {
+  animation: expand-section 2s ease-in-out forwards;
+}
+
+.slide-down {
+  transform-origin: top center;
+  animation: slide-down 0.5s ease-in-out forwards;
 }
 
 .nav-bar {
@@ -445,6 +469,7 @@ section .heading-sub-four {
 
 .nav-list {
   text-align: center;
+  width: 30%;
   padding-inline-start: 0;
 }
 .nav-list li {
@@ -452,11 +477,12 @@ section .heading-sub-four {
 }
 .nav-list a {
   color: #fff;
+  display: inline-block;
 }
 .nav-list a:hover {
   color: #a8a8a8;
-  transform: scale(1.5);
   transition: all 0.4s ease-in-out;
+  transform: scale(1.3);
 }
 
 section {
@@ -473,13 +499,19 @@ section {
   border: 1px solid #f0f0f0;
 }
 
-.main-header {
+.main-header,
+.nav-bar {
   display: flex;
 }
 
 .main-header {
   align-items: center;
   justify-content: center;
+}
+
+.nav-bar {
+  justify-content: center;
+  align-content: center;
 }
 
 @media (min-width: 768px) {
