--- a/css/styles.css
+++ b/css/styles.css
@@ -372,10 +372,11 @@ a {
 img {
   width: 100%;
   border: 1px solid #f0f0f0;
+  filter: grayscale(100%);
 }
 
 section h2 {
-  color: #ebebeb;
+  color: #d3d3d3;
   position: relative;
   font-size: 3em;
 }
@@ -421,25 +422,22 @@ section .heading-sub-four {
 
 @keyframes slide-down {
   0% {
+    height: 0;
+  }
+  30% {
     opacity: 0;
     transform: translateY(-60px);
+  }
+  90% {
+    height: auto;
   }
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
-@keyframes expand-section {
-  0% {
-    transform: scale(1, 1);
-  }
-  100% {
-    transform: scale(1, 1.2);
-  }
-}
 #about {
   padding-left: 0.5em;
-  transition: border-bottom 0.8s ease-in-out;
 }
 #about .display {
   border-left: 1px solid #000;
@@ -451,13 +449,9 @@ section .heading-sub-four {
   cursor: pointer;
 }
 
-.expand-section {
-  animation: expand-section 2s ease-in-out forwards;
-}
-
 .slide-down {
   transform-origin: top center;
-  animation: slide-down 0.5s ease-in-out forwards;
+  animation: slide-down 0.9s ease-in-out forwards;
 }
 
 .nav-bar {
@@ -481,7 +475,7 @@ section .heading-sub-four {
 }
 .nav-list a:hover {
   color: #a8a8a8;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.3s ease-in-out;
   transform: scale(1.3);
 }
 
@@ -524,6 +518,15 @@ section {
   }
   .main-header .main-name:hover {
     cursor: pointer;
+  }
+
+  img:hover {
+    cursor: pointer;
+    filter: grayscale(0%);
+  }
+
+  .portfolio-item {
+    width: 50%;
   }
 }
 
