--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -13,4 +13,13 @@
       cursor: pointer;
     }
   }
+  img {
+    &:hover {
+      cursor: pointer;
+      filter: grayscale(0%);
+    }
+  }
+  .portfolio-item {
+    width: 50%;
+  }
 }
