add opening slide effect when skills section or when an img is clicked to display info about skills or img clicked. Added new SVG files to replace old ones and added to layout. Created effect when img is clicked to display img in color and back to grayscale when clicked off

--- a/scss/components/_img.scss
+++ b/scss/components/_img.scss
@@ -5,3 +5,11 @@ img {
   border: 1px solid #f0f0f0;
   filter: grayscale(100%);
 }
+
+.no-filter {
+  filter: grayscale(0);
+}
+
+svg {
+  width: 20%;
+}
