--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,14 @@ img {
   filter: grayscale(100%);
 }
 
+.no-filter {
+  filter: grayscale(0);
+}
+
+svg {
+  width: 20%;
+}
+
 section h2 {
   color: #d3d3d3;
   position: relative;
@@ -420,6 +428,31 @@ section .heading-sub-four {
   position: absolute;
 }
 
+.nav-bar {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  margin-top: 1em;
+}
+
+.nav-list {
+  text-align: center;
+  width: 30%;
+  padding-inline-start: 0;
+}
+.nav-list li {
+  margin-bottom: 0.5em;
+}
+.nav-list a {
+  color: #fff;
+  display: inline-block;
+}
+.nav-list a:hover {
+  color: #a8a8a8;
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.3);
+}
+
 @keyframes slide-down {
   0% {
     height: 0;
@@ -449,34 +482,17 @@ section .heading-sub-four {
   cursor: pointer;
 }
 
+.skills {
+  text-align: center;
+}
+.skills .skill {
+  max-height: 0;
+  overflow: hidden;
+}
+
 .slide-down {
   transform-origin: top center;
   animation: slide-down 0.9s ease-in-out forwards;
-}
-
-.nav-bar {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  margin-top: 1em;
-}
-
-.nav-list {
-  text-align: center;
-  width: 30%;
-  padding-inline-start: 0;
-}
-.nav-list li {
-  margin-bottom: 0.5em;
-}
-.nav-list a {
-  color: #fff;
-  display: inline-block;
-}
-.nav-list a:hover {
-  color: #a8a8a8;
-  transition: all 0.3s ease-in-out;
-  transform: scale(1.3);
 }
 
 section {
@@ -485,12 +501,24 @@ section {
 
 .portfolio-item {
   margin-top: 0.5em;
+  text-align: center;
 }
-.portfolio-item p:first-of-type {
+.portfolio-item p {
   font-size: 1.5rem;
 }
-.portfolio-item .portfolio-info {
-  border: 1px solid #f0f0f0;
+.portfolio-item .portfolio-info p {
+  font-size: 1rem;
+  max-height: 0;
+  overflow: hidden;
+}
+
+.skills {
+  display: grid;
+}
+
+.skills {
+  margin: 0 auto;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .main-header,
