--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -19,6 +19,31 @@
   }
 }
 
+.nav-bar {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  margin-top: 1em;
+}
+
+.nav-list {
+  text-align: center;
+  width: 30%;
+  padding-inline-start: 0;
+  & li {
+    margin-bottom: .5em;
+  }
+  & a {
+    color: $primary-white;
+    display: inline-block;
+  }
+  & a:hover {
+    color: #a8a8a8;
+    transition: all .3s ease-in-out;
+    transform: scale(1.3);
+  }
+}
+
 @keyframes slide-down {
   0% {
     height: 0;
@@ -49,34 +74,17 @@
   }
 }
 
+.skills {
+  text-align: center;
+  & .skill {
+    max-height: 0;
+    overflow: hidden;
+  }
+}
+
 .slide-down {
   transform-origin: top center;
   animation: slide-down .9s ease-in-out forwards;
-}
-
-.nav-bar {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  margin-top: 1em;
-}
-
-.nav-list {
-  text-align: center;
-  width: 30%;
-  padding-inline-start: 0;
-  & li {
-    margin-bottom: .5em;
-  }
-  & a {
-    color: $primary-white;
-    display: inline-block;
-  }
-  & a:hover {
-    color: #a8a8a8;
-    transition: all .3s ease-in-out;
-    transform: scale(1.3);
-  }
 }
 
 section {
@@ -85,10 +93,13 @@ section {
 
 .portfolio-item {
   margin-top: .5em;
-  & p:first-of-type {
+  text-align: center;
+  & p{
     font-size: 1.5rem;
   }
-  & .portfolio-info {
-    border: 1px solid #f0f0f0;
+  & .portfolio-info p {
+    font-size: 1rem;
+    max-height: 0;
+    overflow: hidden;
   }
 }
