Created and added project files so can be linked live when anchor is clicked for that app. Changed border color to be darker

--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,10 @@ section .heading-sub-four {
   cursor: pointer;
 }
 
+#skills:hover {
+  cursor: pointer;
+}
+
 .skills {
   text-align: center;
 }
@@ -496,12 +500,16 @@ section .heading-sub-four {
 }
 
 section {
-  border-bottom: 1px solid #f0f0f0;
+  border-bottom: 1px solid #c0c0c0;
 }
 
 .portfolio-item {
   margin-top: 0.5em;
   text-align: center;
+  border-bottom: 1px solid #c0c0c0;
+}
+.portfolio-item:last-child {
+  border-bottom: none;
 }
 .portfolio-item p {
   font-size: 1.5rem;
