created tracing and fill animation for skill list items when hovered. Only created this effect for the html and sass logo will work on different animations for js and css3 skill. Created inital layout for contact info. Changed contact info section from section tag to footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,27 +383,33 @@ svg {
   width: 20%;
 }
 
-section h2 {
+section h2,
+footer h2 {
   color: #d3d3d3;
   position: relative;
   font-size: 3em;
 }
-section span {
+section span,
+footer span {
   color: #000;
   font-size: 0.75em;
   position: absolute;
   top: 50%;
 }
-section .heading-sub-one {
+section .heading-sub-one,
+footer .heading-sub-one {
   left: 140px;
 }
-section .heading-sub-two {
+section .heading-sub-two,
+footer .heading-sub-two {
   left: 110px;
 }
-section .heading-sub-three {
+section .heading-sub-three,
+footer .heading-sub-three {
   left: 120px;
 }
-section .heading-sub-four {
+section .heading-sub-four,
+footer .heading-sub-four {
   left: 175px;
 }
 
@@ -482,30 +488,39 @@ section .heading-sub-four {
   cursor: pointer;
 }
 
-@keyframes html {
+@keyframes trace {
   0% {
-    content: " >";
-    transform: translateX(-20px);
+    fill: transparent;
   }
   100% {
-    transform: translateX(20px);
-    content: " >";
+    fill: transparent;
+    stroke-dashoffset: 0;
   }
+}
+@keyframes html-fill {
+  100% {
+    fill: #d51406;
+  }
+}
+@keyframes sass-fill {
+  100% {
+    fill: #e52489;
+  }
+}
+#skills {
+  transition: all 0.5s ease-in-out;
 }
 #skills:hover {
   cursor: pointer;
 }
 
-.html svg:hover {
-  fill: #d51406;
-}
-.html .html-svg:hover::before {
+.html .html-logo:hover {
   font-size: 2.5em;
-  animation: html 1s ease-in-out infinite alternate;
-}
-.html .html-svg:hover::after {
-  font-size: 2.5em;
-  animation: html 1s linear forwards;
+  stroke: #d51406;
+  stroke-width: 0.5;
+  stroke-dasharray: 105;
+  stroke-dashoffset: 105;
+  animation: trace 3s linear forwards, html-fill 0.8s 3s forwards;
 }
 
 .css svg:hover {
@@ -516,8 +531,13 @@ section .heading-sub-four {
   fill: #f5e936;
 }
 
-.sass svg:hover {
-  fill: #e52489;
+.sass .sass-logo:hover {
+  font-size: 2.5em;
+  stroke: #e52489;
+  stroke-width: 0.5;
+  stroke-dasharray: 105;
+  stroke-dashoffset: 105;
+  animation: trace 3s linear forwards, sass-fill 0.8s 3s forwards;
 }
 
 .skills {
@@ -554,6 +574,18 @@ section {
   overflow: hidden;
 }
 
+.contact-info {
+  padding-bottom: 3rem;
+}
+.contact-info p {
+  text-align: center;
+  font-size: 1.5em;
+}
+.contact-info .email, .contact-info .git {
+  width: 50%;
+  margin: 0 auto;
+}
+
 .skills {
   display: grid;
 }
@@ -564,7 +596,10 @@ section {
 }
 
 .main-header,
-.nav-bar {
+.nav-bar,
+.contact-links,
+.email,
+.git {
   display: flex;
 }
 
@@ -576,6 +611,15 @@ section {
 .nav-bar {
   justify-content: center;
   align-content: center;
+}
+
+.contact-links {
+  flex-direction: row;
+}
+
+.email,
+.git {
+  justify-content: center;
 }
 
 @media (min-width: 768px) {
