--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,7 +1,12 @@
 //Grid
-
+.grid-container,
 .skills {
   display: grid;
+}
+
+.grid-container {
+  grid-template-columns: 100%;
+  grid-auto-rows: auto;
 }
 
 .skills {
