--- a/css/styles.css
+++ b/css/styles.css
@@ -584,6 +584,10 @@ section {
   border-bottom: 1px solid #c0c0c0;
 }
 
+#scroll {
+  display: none;
+}
+
 .portfolio-item {
   margin-top: 0.5em;
   text-align: center;
@@ -731,8 +735,33 @@ section {
     filter: grayscale(0%);
   }
 
+  #scroll {
+    display: inline-block;
+    position: absolute;
+    z-index: 20;
+  }
+  #scroll .scroll-left, #scroll .scroll-right {
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 1em 0.5em;
+    border: 1px solid #c0c0c0;
+    border-radius: 5px;
+  }
+
+  .portfolio-list {
+    overflow: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+  .portfolio-list p {
+    display: none;
+  }
+
   .portfolio-item {
+    display: inline-block;
+    margin-right: 5em;
     width: 50%;
+    border-bottom: none;
   }
 }
 
