--- a/css/styles.css
+++ b/css/styles.css
@@ -584,10 +584,6 @@ section {
   border-bottom: 1px solid #c0c0c0;
 }
 
-#scroll {
-  display: none;
-}
-
 .portfolio-item {
   margin-top: 0.5em;
   text-align: center;
@@ -719,6 +715,14 @@ section {
     grid-column: 1/span 2;
   }
 
+  .portfolio-list {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 20px;
+  }
+
   .main-header .main-name {
     opacity: 0;
   }
@@ -735,33 +739,14 @@ section {
     filter: grayscale(0%);
   }
 
-  #scroll {
-    display: inline-block;
-    position: absolute;
-    z-index: 20;
-  }
-  #scroll .scroll-left, #scroll .scroll-right {
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 1em 0.5em;
-    border: 1px solid #c0c0c0;
-    border-radius: 5px;
-  }
-
-  .portfolio-list {
-    overflow: hidden;
-    overflow-x: auto;
-    white-space: nowrap;
-  }
-  .portfolio-list p {
-    display: none;
-  }
-
   .portfolio-item {
     display: inline-block;
     margin-right: 5em;
-    width: 50%;
     border-bottom: none;
+  }
+  .portfolio-item img {
+    height: 100%;
+    max-height: 210px;
   }
 }
 
