--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -32,6 +32,14 @@
     grid-column: 1 / span 2;
   }
 
+  .portfolio-list {
+    @include center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 20px;
+  }
+
   .main-header {
     & .main-name {
       opacity: 0;
@@ -50,31 +58,13 @@
       filter: grayscale(0%);
     }
   }
-  #scroll {
-    display: inline-block;
-    position: absolute;
-    z-index: 20;
-    & .scroll-left,
-    & .scroll-right {
-    font-size: 2rem;
-    font-weight: bold;
-    padding: 1em .5em;
-    border: 1px solid #c0c0c0;
-    border-radius: 5px;
-    }
-  }
-  .portfolio-list {
-    overflow: hidden;
-    overflow-x: auto;
-    white-space: nowrap;
-    & p {
-      display: none;
-    }
-  }
   .portfolio-item {
     display: inline-block;
     margin-right: 5em;
-    width: 50%;
     border-bottom: none;
+    & img {
+      height: 100%;
+      max-height: 210px;
+    }
   }
 }
