working on main layout. Created js to listen for media at 768px for dropdown slide event. working on creating portfolio layout. Created new nav-bar for 768px break. Changed grid layout for body grid-container

--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -38,7 +38,7 @@
     display: inline-block;
   }
   & a:hover {
-    color: #a8a8a8;
+    color: #757575;
     transition: all .3s ease-in-out;
     transform: scale(1.3);
   }
