--- a/css/styles.css
+++ b/css/styles.css
@@ -454,7 +454,7 @@ footer .heading-sub-four {
   display: inline-block;
 }
 .nav-list a:hover {
-  color: #a8a8a8;
+  color: #757575;
   transition: all 0.3s ease-in-out;
   transform: scale(1.3);
 }
@@ -663,7 +663,7 @@ section {
 
 .nav-bar {
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .contact-links {
@@ -673,8 +673,7 @@ section {
 
 .email,
 .git,
-.facebook,
-.twitter {
+.facebook {
   justify-content: center;
 }
 
@@ -698,7 +697,8 @@ section {
   }
 }
 @media (min-width: 768px) {
-  .grid-main {
+  .grid-main,
+.grid-container {
     display: grid;
     grid-template-columns: 50%;
   }
@@ -711,8 +711,28 @@ section {
     grid-column: 2/span 1;
   }
 
-  #portfolio {
+  #portfolio,
+header,
+aside,
+main {
     grid-column: 1/span 2;
+  }
+
+  #contact {
+    grid-column: 2/span 1;
+  }
+
+  .nav-bar {
+    top: 0;
+  }
+
+  .nav-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 70%;
+    font-size: 1.2em;
+    border-bottom: 1px solid #fff;
   }
 
   .portfolio-list {
@@ -734,19 +754,34 @@ section {
     cursor: pointer;
   }
 
-  img:hover {
-    cursor: pointer;
-    filter: grayscale(0%);
-  }
-
   .portfolio-item {
     display: inline-block;
     margin-right: 5em;
     border-bottom: none;
+    position: relative;
   }
   .portfolio-item img {
     height: 100%;
     max-height: 210px;
+  }
+  .portfolio-item .portfolio-info {
+    transition: all 0.7s ease-in-out;
+    top: 50%;
+    left: 10%;
+    position: absolute;
+    opacity: 0;
+    width: 80%;
+  }
+  .portfolio-item:hover .portfolio-info {
+    opacity: 1;
+  }
+  .portfolio-item:hover img {
+    opacity: 0.5;
+    cursor: pointer;
+    filter: grayscale(50%);
+  }
+  .portfolio-item .portfolio-info p {
+    overflow: visible;
   }
 }
 
