--- a/scss/components/_flexbox.scss
+++ b/scss/components/_flexbox.scss
@@ -17,7 +17,7 @@
 
 .nav-bar {
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .contact-links {
@@ -27,8 +27,7 @@
 
 .email,
 .git,
-.facebook,
-.twitter {
+.facebook {
   justify-content: center;
 }
 
