--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -18,7 +18,8 @@
 }
 
 @media(min-width: 768px) {
-  .grid-main {
+  .grid-main,
+  .grid-container {
     display: grid;
     grid-template-columns: 50%;
   }
@@ -28,8 +29,25 @@
   #skills {
     grid-column: 2 / span 1;
   }
-  #portfolio {
+  #portfolio,
+  header,
+  aside,
+  main {
     grid-column: 1 / span 2;
+  }
+  #contact {
+    grid-column: 2 / span 1;
+  }
+  .nav-bar {
+    top: 0;
+  }
+  .nav-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 70%;
+    font-size: 1.2em;
+    border-bottom: 1px solid $primary-white;
   }
 
   .portfolio-list {
@@ -52,19 +70,39 @@
       cursor: pointer;
     }
   }
-  img {
-    &:hover {
-      cursor: pointer;
-      filter: grayscale(0%);
-    }
-  }
+  // img {
+  //   &:hover {
+  //     cursor: pointer;
+  //     filter: grayscale(50%);
+  //   }
+  // }
   .portfolio-item {
     display: inline-block;
     margin-right: 5em;
     border-bottom: none;
+    position: relative;
     & img {
       height: 100%;
       max-height: 210px;
+    }
+    & .portfolio-info {
+      transition: all .7s ease-in-out;
+      top: 50%;
+      left: 10%;
+      position: absolute;
+      opacity: 0;
+      width: 80%;
+    }
+    &:hover .portfolio-info {
+      opacity: 1;
+    }
+    &:hover img {
+      opacity: .5;
+      cursor: pointer;
+      filter: grayscale(50%);
+    }
+    & .portfolio-info p{
+      overflow: visible;
     }
   }
 }
