--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -24,10 +24,10 @@
     grid-template-columns: 50%;
   }
   #about {
-    grid-column: 1 / span 1;
+    grid-column: 1 / span 2;
   }
   #skills {
-    grid-column: 2 / span 1;
+    grid-column: 1 / span 2;
   }
   #portfolio,
   header,
@@ -50,14 +50,6 @@
     border-bottom: 1px solid $primary-white;
   }
 
-  .portfolio-list {
-    @include center;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-auto-rows: minmax(150px, auto);
-    grid-gap: 20px;
-  }
-
   .main-header {
     & .main-name {
       opacity: 0;
@@ -70,39 +62,57 @@
       cursor: pointer;
     }
   }
-  // img {
-  //   &:hover {
-  //     cursor: pointer;
-  //     filter: grayscale(50%);
-  //   }
-  // }
+  section {
+    border-bottom: none;
+    &:nth-child(odd) {
+      background-color: #f9f9f9;
+    }
+  }
+  #about {
+  .display {
+    max-height: 100%;
+    overflow: visible;
+  }
+  }
+  #skills {
+    & h2 {
+      text-align: end;
+    }
+    & .heading-sub-two {
+      left: 0;
+      right: 20px;
+    }
+    & .skill {
+      max-height: 100%;
+      overflow: visible;
+    }
+  }
   .portfolio-item {
-    display: inline-block;
     margin-right: 5em;
     border-bottom: none;
     position: relative;
+    display: flex;
+    & .portfolio-info {
+      align-self: center;
+    }
     & img {
       height: 100%;
       max-height: 210px;
-    }
-    & .portfolio-info {
-      transition: all .7s ease-in-out;
-      top: 50%;
-      left: 10%;
-      position: absolute;
-      opacity: 0;
-      width: 80%;
-    }
-    &:hover .portfolio-info {
-      opacity: 1;
-    }
-    &:hover img {
-      opacity: .5;
-      cursor: pointer;
-      filter: grayscale(50%);
+      width: 100%;
+      max-width: 300px;
     }
     & .portfolio-info p{
+      max-height: 100%;
       overflow: visible;
+    }
+  }
+  #contact {
+    & h2 {
+      text-align: end;
+    }
+    & .heading-sub-four {
+      left: 0;
+      right: 20px;
     }
   }
 }
