--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -87,13 +87,24 @@
       overflow: visible;
     }
   }
+  .portfolio-list {
+    & .mobile-title {
+      visibility: hidden;
+    }
+  }
   .portfolio-item {
     margin-right: 5em;
+    margin-bottom: 5em;
     border-bottom: none;
-    position: relative;
     display: flex;
+    flex-direction: row;
+    &:nth-child(4n -2) {
+      flex-direction: row-reverse;
+    }
     & .portfolio-info {
       align-self: center;
+      width: 50%;
+      margin: 0 3em;
     }
     & img {
       height: 100%;
@@ -104,6 +115,12 @@
     & .portfolio-info p{
       max-height: 100%;
       overflow: visible;
+    }
+    & .tablet-title {
+    visibility: visible;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: .5em;
     }
   }
   #contact {
