--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -87,14 +87,42 @@
       overflow: visible;
     }
   }
+  .active {
+    background-color: #c0c0c0;
+    opacity: .5;
+  }
+  .view {
+    visibility: visible;
+    display: flex;
+    flex-direction: row;
+    margin-left: 3em;
+    & .list-view,
+    & .grid-view {
+      width: 40px;
+      height: 40px;
+      border: 1px solid #c0c0c0;
+      border-radius: 5px;
+      padding: .5em;
+    }
+    & .grid-view {
+      margin-left: 1em;
+    }
+    & .list-view:hover,
+    & .grid-view:hover {
+      cursor: pointer;
+      opacity: .5;
+    }
+  }
   .portfolio-list {
     & .mobile-title {
-      visibility: hidden;
+      display: none;
     }
   }
   .portfolio-item {
     margin-right: 5em;
     margin-bottom: 5em;
+  }
+  .list {
     border-bottom: none;
     display: flex;
     flex-direction: row;
@@ -111,6 +139,44 @@
       max-height: 210px;
       width: 100%;
       max-width: 300px;
+    }
+    & .portfolio-info p{
+      max-height: 100%;
+      overflow: visible;
+    }
+    & .tablet-title {
+    visibility: visible;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: .5em;
+    }
+  }
+  .grid {
+    @include center;
+    border-bottom: none;
+    margin-top: 2em;
+    display: grid;
+    max-width: 1000px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: minmax(150px, auto);
+    & img {
+      width: 100%;
+      height: 200px;
+    }
+    & .portfolio-item {
+      border-bottom: none;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+    }
+    .portfolio-info p:last-child {
+      position: absolute;
+      top: 5%;
+      opacity: 0;
+    }
+    &.portfolio-info p:hover {
+      opacity: 1;
+      cursor: pointer;
     }
     & .portfolio-info p{
       max-height: 100%;
