--- a/css/styles.css
+++ b/css/styles.css
@@ -385,7 +385,7 @@ svg {
 
 section h2,
 footer h2 {
-  color: #d3d3d3;
+  color: #b5b5b5;
   position: relative;
   font-size: 3em;
 }
@@ -616,7 +616,7 @@ section {
 }
 .contact-info p {
   text-align: center;
-  color: #d3d3d3;
+  color: #b5b5b5;
   position: relative;
   font-size: 3em;
   font-style: italic;
@@ -760,7 +760,7 @@ main {
     border-bottom: none;
   }
   section:nth-child(odd) {
-    background-color: #f9f9f9;
+    background-color: #e8e8e8;
   }
 
   #about .display {
@@ -780,6 +780,11 @@ main {
     overflow: visible;
   }
 
+  .header-container {
+    display: flex;
+    align-items: center;
+  }
+
   .active {
     background-color: #c0c0c0;
     opacity: 0.5;
@@ -795,11 +800,13 @@ main {
     width: 40px;
     height: 40px;
     border: 1px solid #c0c0c0;
-    border-radius: 5px;
     padding: 0.5em;
   }
   .view .grid-view {
-    margin-left: 1em;
+    border-radius: 0 5px 5px 0;
+  }
+  .view .list-view {
+    border-radius: 5px 0 0 5px;
   }
   .view .list-view:hover, .view .grid-view:hover {
     cursor: pointer;
@@ -813,6 +820,10 @@ main {
   .portfolio-item {
     margin-right: 5em;
     margin-bottom: 5em;
+  }
+
+  img:hover {
+    cursor: pointer;
   }
 
   .list {
@@ -834,6 +845,10 @@ main {
     width: 100%;
     max-width: 300px;
   }
+  .list img:hover {
+    filter: grayscale(0);
+    transition: filter 0.5s ease-in-out;
+  }
   .list .portfolio-info p {
     max-height: 100%;
     overflow: visible;
@@ -853,25 +868,24 @@ main {
     max-width: 1000px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: minmax(150px, auto);
+    gap: 40px;
   }
   .grid img {
-    width: 100%;
     height: 200px;
   }
   .grid .portfolio-item {
+    margin: 0 auto;
+    width: 100%;
     border-bottom: none;
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
   .grid .portfolio-info p:last-child {
     position: absolute;
     top: 5%;
     opacity: 0;
-  }
-  .grid.portfolio-info p:hover {
-    opacity: 1;
-    cursor: pointer;
   }
   .grid .portfolio-info p {
     max-height: 100%;
@@ -882,6 +896,14 @@ main {
     font-size: 1.5rem;
     text-align: center;
     margin-top: 0.5em;
+  }
+  .grid .portfolio-info p:last-child:hover {
+    opacity: 1;
+    cursor: pointer;
+  }
+  .grid img:hover {
+    filter: grayscale(0);
+    transition: filter 0.5s ease-in-out;
   }
 
   #contact h2 {
