--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -205,7 +205,7 @@ section {
   padding-bottom: 3rem;
   & p {
     text-align: center;
-    color: #d3d3d3;
+    color: #b5b5b5;
     position: relative;
     font-size: 3em;
     font-style: italic;
