--- a/css/styles.css
+++ b/css/styles.css
@@ -687,6 +687,57 @@ section {
   justify-content: center;
 }
 
+.modal-container {
+  display: none;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
+
+.scroll-arrow {
+  position: absolute;
+  width: 100%;
+  margin: 25% auto;
+  padding: 2rem;
+  text-align: center;
+  font-size: 2em;
+  color: #fff;
+}
+.scroll-arrow .scroll-left, .scroll-arrow .scroll-right {
+  padding: 1em;
+  border-radius: 5px;
+  background-color: #787878;
+  opacity: 0.7;
+}
+.scroll-arrow .scroll-left:hover, .scroll-arrow .scroll-right:hover {
+  cursor: pointer;
+}
+
+.modal-box {
+  width: 375px;
+  position: relative;
+  text-align: center;
+  margin: 15% auto;
+  padding: 30px 20px;
+  border: 1px solid #787878;
+  border-radius: 5px;
+  background-color: #fff;
+}
+.modal-box .modal-close {
+  position: absolute;
+  right: 15px;
+  top: 5px;
+}
+.modal-box .modal-close:hover {
+  cursor: pointer;
+}
+
 @media (min-width: 485px) {
   footer h2 {
     margin-bottom: 0;
@@ -883,9 +934,7 @@ main {
     justify-content: center;
   }
   .grid .portfolio-info p:last-child {
-    position: absolute;
-    top: 5%;
-    opacity: 0;
+    display: none;
   }
   .grid .portfolio-info p {
     max-height: 100%;
@@ -896,10 +945,6 @@ main {
     font-size: 1.5rem;
     text-align: center;
     margin-top: 0.5em;
-  }
-  .grid .portfolio-info p:last-child:hover {
-    opacity: 1;
-    cursor: pointer;
   }
   .grid img:hover {
     filter: grayscale(0);
