add function for left and right scroll button on modal. Changed layout of modal box. Moved evenlistener that creates modal to a function.

--- a/scss/components/_flexbox.scss
+++ b/scss/components/_flexbox.scss
@@ -2,6 +2,7 @@
 
 .main-header,
 .nav-bar,
+.scroll-arrow,
 .contact-links,
 .email,
 .git,
@@ -18,6 +19,10 @@
 .nav-bar {
   justify-content: center;
   align-items: center;
+}
+
+.scroll-arrow {
+  justify-content: space-around;
 }
 
 .contact-links {
