--- a/css/styles.css
+++ b/css/styles.css
@@ -658,6 +658,7 @@ section {
 
 .main-header,
 .nav-bar,
+.scroll-arrow,
 .contact-links,
 .email,
 .git,
@@ -674,6 +675,10 @@ section {
 .nav-bar {
   justify-content: center;
   align-items: center;
+}
+
+.scroll-arrow {
+  justify-content: space-around;
 }
 
 .contact-links {
@@ -704,7 +709,6 @@ section {
   position: absolute;
   width: 100%;
   margin: 25% auto;
-  padding: 2rem;
   text-align: center;
   font-size: 2em;
   color: #fff;
@@ -712,30 +716,38 @@ section {
 .scroll-arrow .scroll-left, .scroll-arrow .scroll-right {
   padding: 1em;
   border-radius: 5px;
-  background-color: #787878;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .scroll-arrow .scroll-left:hover, .scroll-arrow .scroll-right:hover {
   cursor: pointer;
+  text-shadow: 0 0 8px #fff, 0 0 5px #fff;
 }
 
 .modal-box {
-  width: 375px;
+  width: 600px;
   position: relative;
   text-align: center;
   margin: 15% auto;
   padding: 30px 20px;
-  border: 1px solid #787878;
+}
+.modal-box .port-modal-info {
+  margin-top: 1.5rem;
   border-radius: 5px;
-  background-color: #fff;
+}
+.modal-box .port-modal-info p {
+  color: #fff;
+  opacity: 0.8;
 }
 .modal-box .modal-close {
   position: absolute;
+  color: #fff;
+  font-size: 1.5em;
   right: 15px;
   top: 5px;
 }
 .modal-box .modal-close:hover {
   cursor: pointer;
+  text-shadow: 0 0 8px #fff, 0 0 5px #fff;
 }
 
 @media (min-width: 485px) {
