--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -17,7 +17,6 @@
   position: absolute;
   width: 100%;
   margin: 25% auto;
-  padding: 2rem;
   text-align: center;
   font-size: 2em;
   color: $primary-white;
@@ -25,30 +24,38 @@
   & .scroll-right {
     padding: 1em;
     border-radius: 5px;
-    background-color: #787878;
-    opacity: .7;
+    opacity: .8;
   }
   & .scroll-left:hover,
   & .scroll-right:hover {
     cursor: pointer;
+    text-shadow: 0 0 8px $primary-white, 0 0 5px $primary-white;
   }
 }
 
 .modal-box {
-  width: 375px;
+  width: 600px;
   position: relative;
   text-align: center;
   margin: 15% auto;
   padding: 30px 20px;
-  border: 1px solid #787878;
-  border-radius: 5px;
-  background-color: $primary-white;
+  & .port-modal-info {
+    margin-top: 1.5rem ;
+    border-radius: 5px;
+  }
+  & .port-modal-info p {
+    color: $primary-white;
+    opacity: .8;
+  }
   & .modal-close {
     position: absolute;
+    color: $primary-white;
+    font-size: 1.5em;
     right: 15px;
     top: 5px;
   }
   & .modal-close:hover {
     cursor: pointer;
+    text-shadow: 0 0 8px $primary-white, 0 0 5px $primary-white;
   }
 }
