--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -12,7 +12,7 @@
   & img {
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 70vh;
   }
   & .main-name {
     position: absolute;
@@ -187,6 +187,12 @@ section {
     visibility: hidden;
   }
 }
+.skill-used {
+  position: absolute;
+  & svg {
+    width: 20%;
+  }
+}
 .portfolio-item {
   margin-top: .5em;
   text-align: center;
@@ -198,6 +204,9 @@ section {
     font-size: 1rem;
     max-height: 0;
     overflow: hidden;
+  }
+  & img {
+    position: relative;
   }
 }
 
